--- a/SongLib/src/songlib/view/SongEditDialog.fxml
+++ b/SongLib/src/songlib/view/SongEditDialog.fxml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- Tim Goetjen and Kinh Hoang -->
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
