--- a/SongLib/src/songlib/view/SongView.fxml
+++ b/SongLib/src/songlib/view/SongView.fxml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- Tim Goetjen and Kinh Hoang -->
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
